# coal

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Win  README.md  carbon.h  coal.h  m.c  m_math.c  m_math.h  tags  util.c  util.h
.cache/clangd/index/: m.c.2D92C819054E1AC3.idx  m.h.44FB885ACD601A45.idx  m_math.c.12EA7AAE4199FEB1.idx  m_math.h.C6316C688F32E904.idx  test01.c.6C59E4C293614AB2.idx  util.c.A6F132CF34F6712F.idx  util.h.4D389F681C57EAD2.idx
cmake/: CMakeLists.txt  coalConfig.cmake.in
doc/: function-comparison.md
include/coal/: coal.h  generics.h  intersect.h  linalg.h  types.h  util.h
scripts/: gen_simple_func_names.py
src/: CMakeLists.txt  coaltest.c  intersect.c  linalg.c  m.h  util.c
src/include/coal/: coal.h  intersect.h  linalg.h  types.h  util.h
src/lib/: CMakeLists.txt  intersect.c  linalg.c  linalg.h  m_math.c  m_math.h  util.c  util.h
src/lib/coal/: coal.h  util.c
src/test/: CMakeLists.txt  cross.c  dot.c  vecAdd.c
test/: CMakeLists.txt  cross.c  dot.c  generics.c  vecAdd.c
