if(NOT COAL_SKIP_TESTS)
add_executable(cross)
add_executable(dot)
add_executable(vecAdd)
target_sources(cross PRIVATE cross.c)
target_sources(dot PRIVATE dot.c)
target_sources(vecAdd PRIVATE vecAdd.c)
target_link_libraries(cross PRIVATE Coal::Coal)
target_link_libraries(dot PRIVATE Coal::Coal)
target_link_libraries(vecAdd PRIVATE Coal::Coal)
target_compile_definitions(cross PUBLIC COAL_SIMPLE_TYPE_NAMES)
target_compile_definitions(dot PUBLIC COAL_SIMPLE_TYPE_NAMES)
target_compile_definitions(vecAdd PUBLIC COAL_SIMPLE_TYPE_NAMES)
add_test(crosst cross)
add_test(dott dot)
add_test(vecAddt vecAdd)
endif()
